# Nimbly-API

./: .gitignore  pyproject.toml
app/: main.py
app/api/v1/: routes.py
app/models/: ec2.py
app/services/: manager.py
